--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <div data-ng-controller="helloWorldCtrl">
             <div hello-world name="name"></div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+        <script src="bower/angular/angular.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
