--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,14 @@
         <div data-ng-controller="helloWorldCtrl">
             <div hello-world name="name"></div>
         </div>
-        <script src="bower/angular/angular.js"></script>
+        <!--(if target dev)><!-->
+        <script src="js/vendor/angular.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
+        <!--<!(endif)-->
+        <!--(if target dist)><!-->
+        <script src="js/my-hello-world.js"></script>
+        <!--<!(endif)-->
     </body>
 </html>
