--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
             <div hello-world name="name"></div>
         </div>
         <!--(if target dev)><!-->
-        <script src="js/vendor/angular.js"></script>
+        <script src="bower/angular/angular.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/directives.js"></script>
